--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -33,6 +33,7 @@
     "downloadReport":"Select a Evendince Method to Download",
     "search": "Search",
     "headings": {
+        "assessments":"Assessments",
         "programs":"Programs",
         "addQuestions": "Add New Question",
         "parentInfoHeading" : "Parent Information",
