Done with assessor page with API Integration

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -38,7 +38,8 @@
         "addQuestions": "Add New Question",
         "parentInfoHeading" : "Parent Information",
         "parentListHeading" : "Parent List",
-        "schoolListHeading" : "School List",
+        "schoolListHeading" : "View List",
+        "assessorListHeading":"View Assessors",
         "ecmReportsHeading" : "ECM Reports",
         "parentInterview":"Parent Interview",
         "features" : "Features",
@@ -88,6 +89,7 @@
         "city":"City",
         "state":"State",
         "externalId":"External-Id",
+        "role":"Role",
         "callResponse" : "Status",
         "_id":"Id",
         "buttons":{
