--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -60,7 +60,8 @@
         "choices" : "Choices",
         "type" : "Type",
         "uploadingCsv":"Uploading Csv",
-        "operationDashboardUpload":"Upload Csv"
+        "operationDashboardUpload":"Upload Csv",
+        "viewSchools": "View Schools"
     },
     "labels": {
         "uploadCsv" : "Upload Csv"
