--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -38,8 +38,8 @@
         "addQuestions": "Add New Question",
         "parentInfoHeading" : "Parent Information",
         "parentListHeading" : "Parent List",
-        "schoolListHeading" : "View List",
-        "assessorListHeading":"View Assessors",
+        "schoolListHeading" : "School List",
+        "assessorListHeading":"Assessors List",
         "ecmReportsHeading" : "ECM Reports",
         "parentInterview":"Parent Interview",
         "features" : "Features",
