added homepage to sl-programs-portal

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -34,6 +34,7 @@
     "downloadReport":"Select a Evendince Method to Download",
     "search": "Search",
     "headings": {
+        "homes":"Home",
         "assessments":"Assessments",
         "programs":"Programs",
         "addQuestions": "Add New Question",
