--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,7 +13,6 @@
 
     },
     
-    
     "buttons": {
         "download" : "Download",
         "update" : "Update",
@@ -40,8 +39,8 @@
         "addQuestions": "Add New Question",
         "parentInfoHeading" : "Parent Information",
         "parentListHeading" : "Parent List",
-        "schoolListHeading" : "View List",
-        "assessorListHeading":"View Assessors",
+        "schoolListHeading" : "Schools",
+        "assessorListHeading":"Assessors",
         "ecmReportsHeading" : "ECM Reports",
         "parentInterview":"Parent Interview",
         "features" : "Features",
@@ -68,7 +67,7 @@
         "insightReport":"Insight Reports"
     },
     "labels": {
-        "uploadCsv" : "Upload Csv"
+        "uploadCsv" : "Configurations"
 
     },
     "descriptions": {
