added dummy type design for entity reports , breadcrumb in portal design fix of upload csv

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -69,7 +69,9 @@
         "schoolReports" : "Schools Reports ",
         "assessorReports":"Assessor Reports ",
         "summary":"Summary ",
-        "reportEntityReport":"Entity Report"
+        "reportEntityReport":"Entity Report",
+        "uploadAssessorCsv":"Add Assessor",
+        "uploadSchoolCsv":"Add Schools"
         
     },
     "labels": {
