added icons and did sorting to tables in sl-programs-portal

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -62,7 +62,7 @@
         "choices" : "Choices",
         "type" : "Type",
         "uploadingCsv":"Uploading Csv",
-        "operationDashboardUpload":"Upload Csv",
+        "operationDashboardUpload":"Configurations",
         "viewSchools": "View Schools",
         "programList":"Programs List",
         "opsReport":"Reports",
