typo fix for reports

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -69,7 +69,7 @@
         "schoolReports" : "Schools Reports ",
         "assessorReports":"Assessor Reports ",
         "summary":"Summary ",
-        "reportEntityReport":"Entity Report",
+        "reportEntityReport":"Reports",
         "uploadAssessorCsv":"Add Assessor",
         "uploadSchoolCsv":"Add Schools"
         
