ops report done

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -35,7 +35,7 @@
     "downloadReport":"Select a Evendince Method to Download",
     "search": "Search",
     "headings": {
-        "filters":"Applied Filters",
+        "filters":"Filters",
         "homes":"Home",
         "assessments":"Assessments",
         "programs":"Programs",
