Insight report implemented

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -72,7 +72,7 @@
         "schoolReports": "Schools Reports ",
         "assessorReports": "Assessor Reports ",
         "summary": "Summary ",
-        "reportEntityReport": "Reports",
+        "reportEntityReport": "Single Entity Report",
         "uploadAssessorCsv": "Add Assessor",
         "uploadSchoolCsv": "Add Schools"
     },
