--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -43,6 +43,7 @@
         "parentInfoHeading": "Parent Information",
         "parentListHeading": "Parent List",
         "schoolListHeading": "Schools",
+        "blockListHeading":"Blocks",
         "assessorListHeading": "Assessors",
         "ecmReportsHeading": "ECM Reports",
         "parentInterview": "Parent Interview",
