--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -38,6 +38,7 @@
         "reportMiltipleEntityReport":"Multiple Entity Report",
         "filters": "Filters",
         "homes": "Home",
+        "highlevelEntityReport":"High-Level Entity Report",
         "assessments": "Assessments",
         "programs": "Programs",
         "addQuestions": "Add New Question",
