--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -50,7 +50,7 @@
         "parentInterview": "Parent Interview",
         "features": "Features",
         "survey": "Survey",
-        "reports": "Insight",
+        "reports": "Insights",
         "downloadReport": "Download Evedince Report",
         "configurations": "WorkSpace",
         "operations": "Operations",
