shared button added

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -24,6 +24,7 @@
         "submit": "Submit",
         "save": "Save",
         "ok": "Ok",
+        "shareLink":"share link",
         "reset": "Reset",
         "saveSurvey": "Save Survey",
         "cancelSurvey": "Cancel Survey",
