--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -36,6 +36,7 @@
     "downloadReport": "Select a Evendince Method to Download",
     "search": "Search",
     "headings": {
+        "selectSolution":"Select Solution",
         "workSpace":"Workspace",
         "addProgram":"Add Program",
         "frameworkRubricView": "Framework Hierarchy + Rubric",
