structure of program platform

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -23,8 +23,9 @@
         "back": "Back",
         "submit": "Submit",
         "save": "Save",
+        "saveDraft": "Save Draft",
         "ok": "Ok",
-        "shareLink":"share link",
+        "shareLink": "share link",
         "reset": "Reset",
         "saveSurvey": "Save Survey",
         "cancelSurvey": "Cancel Survey",
@@ -36,16 +37,16 @@
     "downloadReport": "Select a Evendince Method to Download",
     "search": "Search",
     "headings": {
-        "selectSolution":"Select Solution",
-        "workSpace":"Workspace",
-        "addProgram":"Add Program",
+        "selectSolution": "Select Solution",
+        "workSpace": "Workspace",
+        "addProgram": "Add Program",
         "frameworkRubricView": "Framework Hierarchy + Rubric",
         "performanceReport": "Performance report",
         "frameWorkStructureRubricLevel": "FrameWork Structure Rubric Level",
         "reportMiltipleEntityReport": "Multiple Entity Report",
         "filters": "Filters",
         "homes": "Home",
-        "reportMultilpeEntityDrillldownReport":"Multilpe Entity Drill-Down Report",
+        "reportMultilpeEntityDrillldownReport": "Multilpe Entity Drill-Down Report",
         "highlevelEntityReport": "High-Level Entity Report",
         "assessments": "Assessments",
         "programs": "Programs",
@@ -53,7 +54,7 @@
         "parentInfoHeading": "Parent Information",
         "parentListHeading": "Parent List",
         "schoolListHeading": "Schools",
-        "blockListHeading":"Blocks",
+        "blockListHeading": "Blocks",
         "assessorListHeading": "Assessors",
         "ecmReportsHeading": "ECM Reports",
         "parentInterview": "Parent Interview",
@@ -88,7 +89,9 @@
         "uploadSchoolCsv": "Add Schools"
     },
     "labels": {
-        "uploadCsv": "Configurations"
+        "uploadCsv": "Configurations",
+        "addUsers": "Add Users",
+        "addHierarchy": "Add Hierarchy"
     },
     "descriptions": {
         "questionFrameWorkDescription": "list of questions.",
