redesign the solution listing with filters page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -42,7 +42,7 @@
         "workspaceDashboard":"Workspace Dashboard",
         "programDetails":"Program Details",
         "solutionDetails":"Solution Details",
-        "selectSolution": "Select Solution",
+        "selectSolution": "Solution",
         "workSpace": "Workspace",
         "addProgram": "Add Program",
         "frameworkRubricView": "Framework Hierarchy + Rubric",
