--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -41,6 +41,7 @@
     "search": "Search",
     "headings": {
         "workspaceDashboard":"Workspace Dashboard",
+        "copyProgram":"Copy Program",
         "programDetails":"Program Details",
         "solutionDetails":"Solution Details",
         "selectSolution": "Solution",
